@@ -64,6 +64,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18676: Change 'positive' to 'non-negative' in queue.py put and get
+  docstrings and ValueError messages. Patch by Zhongyue Luo
+
 - Issue #18681: Fix a NameError in imp.reload() (noticed by Weizhao Li).
 
 - Issue #8112: xlmrpc.server's DocXMLRPCServer server no longer raises an error
